# stock-analyst

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/: analyst.py  main.py
src/documents/: __init__.py  manager.py
src/prompts/: __init__.py  renderer.py  templates.py
src/utils/: __init__.py  config.py
